# ghostfolio-avanaza

./: .gitignore  Cargo.toml  README.md
src/: config.rs  ghostfolio.rs  main.rs
src/avanza/: fund_info.rs  history.rs  mod.rs  search.rs  transaction_history_parser.rs
