[package]
name = "ghostfolio-avanaza"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
reqwest = {version = "0.11.18", features = ["json"]}
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
tokio = {version = "1.32.0", features = ["full"]}
lazy_static = { version = "1.4.0", features = [] }
log = "0.4.20"
chrono = "0.4.31"
cli-clipboard = "0.4.0"
